--- a/Movies_nav/package.json
+++ b/Movies_nav/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-elements": "^3.4.2",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
